tweaked tmux colours for active pane focusing

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,6 +60,13 @@ bind-key C-q send-prefix
 
 # Improve colors
 set -g default-terminal 'screen-256color'
+# fg = thin line 
+set -g pane-border-style "fg=colour244"
+set -g pane-active-border-style "bg=default fg=colour244"
+# fg = text
+set -g pane-border-style "fg=colour244"
+set -g window-style 'fg=colour248,bg=colour234'
+set -g window-active-style 'fg=colour252,bg=colour235'
 
 # Set scrollback buffer to 10000
 set -g history-limit 10000
