tweaked colours for actuve pane borders

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,10 +61,9 @@ bind-key C-q send-prefix
 # Improve colors
 set -g default-terminal 'screen-256color'
 # fg = thin line 
-set -g pane-border-style "fg=colour244"
-set -g pane-active-border-style "bg=default fg=colour244"
+set -g pane-border-style "bg=colour234 fg=colour244"
+set -g pane-active-border-style "bg=colour234 fg=colour208"
 # fg = text
-set -g pane-border-style "fg=colour244"
 set -g window-style 'fg=colour248,bg=colour234'
 set -g window-active-style 'fg=colour252,bg=colour235'
 
