sorting the mess I made out

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,8 +76,8 @@ set -g status-fg colour208
 set -g status-bg colour234
 
 # split panes using | and -
-bind \ split-window -h
-bind - split-window -v
+bind '\' split-window -h
+bind '-' split-window -v
 unbind '"'
 unbind %	
 
